--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -80,6 +80,7 @@ body{
   z-index: -1;
   min-height: 160px;
   margin-right: 3%;
+  cursor: pointer;
 }
 
 .post_form{
@@ -126,6 +127,28 @@ body{
 
 textarea:focus{
   outline: 0;
+}
+
+.comments iframe{
+  width: 100%;
+  max-height: 255px;
+}
+
+.comments textarea:focus{
+  outline: 0;
+}
+
+.numComment_likes{
+  text-decoration: none;
+}
+
+.numComment_likes iframe{
+  height: 40px;
+  width: 25%;
+  overflow: hidden;
+  border:0px;
+  position: relative;
+  top: 13px;
 }
 
 a#titleLogo:hover{
