--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -194,8 +194,8 @@ nav a:hover{
   width: 20%;
   max-width: 240px;
   min-width: 130px;
-  height: 600px;
-  min-height: 600px;
+  height: 100%;
+  min-height: 850px;
   float: left;
   position: relative;
   text-align: center;
