adding delete post function

--- a/assets/css/likes.css
+++ b/assets/css/likes.css
@@ -5,7 +5,7 @@
 
 input[type="submit"]{
   border: 0px;
-  background-color: #f7dad9;
+  background-color: #6C6E87;
   font-family: sans-serif;
   font-size: 18px;
   color: #9ad3bc;
