--- a/assets/css/message.css
+++ b/assets/css/message.css
@@ -60,7 +60,7 @@
 .find_user{
   margin-left: 2%;
   margin-bottom: 6px;
-  
+
 
 }
 
@@ -71,8 +71,18 @@
   border-radius: 5px;
 }
 
-
+.found{
+  margin-top: 20px;
+  border-top: 1px solid #bbbbbb;
+}
 /*** SPECIAL SELECTORS ***/
+
+.found a:hover{
+  text-decoration: none;
+  margin-top: 5px;
+}
+
+
 
 .user_found_messages img{
   height: 35px;
