--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(../imagenes/desktop.jpg);
+    background-color: #1D273D;
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
