--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -27,11 +27,13 @@ body{
 }
 
 .column{
-  background-color: #6C6E87;
+    background: rgba(1, 1, 1,.4);
   padding: 5px;
-  border: 0.5px solid #6C6E87;
+  border: 0.5px solid #1D273D;
   border-radius: 10px;
-  box-shadow: 2px 2px 1px #6C6E87;
+  box-shadow: 0 0 30px rgba(0,.0,.0,.568);
+
+
 }
 
 .users{
@@ -45,6 +47,7 @@ body{
   background: none;
   width: 100%;
   height: 100%;
+
 }
 
 .users img{
@@ -74,6 +77,7 @@ body{
   position: absolute;
   margin-top: 16%;
   margin-right: 200%;
+   color: white;
 
 }
   .carousel-item{
@@ -102,10 +106,12 @@ body{
   min-height: 160px;
   margin-right: 3%;
   cursor: pointer;
+  color: white;
 }
 
 .post_form{
   width: 100%;
+
 }
 
 .posts{
@@ -142,6 +148,7 @@ body{
   width: 7%;
   height: 60px;
   margin-left: 3px;
+
 }
 
 
@@ -161,6 +168,7 @@ textarea:focus{
 
 .numComment_likes{
   text-decoration: none;
+
 }
 
 .numComment_likes iframe{
@@ -170,6 +178,7 @@ textarea:focus{
   border:0px;
   position: relative;
   top: 13px;
+
 
 }
 
