--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -27,7 +27,7 @@ body{
 }
 
 .column{
-    background: rgba(1, 1, 1,.4);
+  background: rgba(1, 1, 1,.4);
   padding: 5px;
   border: 0.5px solid #1D273D;
   border-radius: 10px;
@@ -178,8 +178,6 @@ textarea:focus{
   border:0px;
   position: relative;
   top: 13px;
-
-
 }
 
 a#titleLogo:hover{
@@ -230,8 +228,9 @@ nav a:hover{
   float: left;
   position: relative;
   text-align: center;
-  background-color: #6C6E87;
-  border-right: 5px solid #414358;
+    background: rgba(1, 1, 1,.4);
+  border-right:#1D273D;
+  box-shadow: 0 0 30px rgba(0,.0,.0,.568);
   right: 14px;
 }
 
@@ -254,18 +253,18 @@ nav a:hover{
 }
 
 .profile_main{
-  background-color: #f7dad9;
+  background: rgba(1, 1, 1,.4);
+  box-shadow: 0 0 30px rgba(0,.0,.0,.568);
   min-height: 200px;
   margin-left: 1%;
   width: 77%;
   margin-right: 2.5%;
   float: right;
-  background-color: #6C6E87;
   padding: 10px;
   border: 1px solid #fbf7f0;
-  box-shadow: 2px 2px 1px #968c83;
   top:-25px;
   position: relative;
+  color: white;
 }
 
 .format{
