--- a/assets/css/likes.css
+++ b/assets/css/likes.css
@@ -1,16 +1,18 @@
 .like_value{
   display: inline-block;
   margin-left: 4px;
+  color: white;
 }
 
 input[type="submit"]{
   border: 0px;
-  background-color: #6C6E87;
+    background: rgba(1, 1, 1,.4);
   font-family: sans-serif;
   font-size: 18px;
   color: #9ad3bc;
+
 }
 
 input[type="submit"]:hover{
-  color: #8db596;
+  color: #F7FAFC;
 }
