Finishing find function

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -292,3 +292,16 @@ nav a:hover{
 .center{
   text-align: center;
 }
+
+#main_column{
+  color: #fff;
+}
+
+.adjust_input{
+  width: 60%;
+  display: inline-block;
+}
+
+.adjust_button{
+  margin-left: 10px;
+}
