--- a/assets/css/register_style.css
+++ b/assets/css/register_style.css
@@ -29,7 +29,7 @@ form{
 
   text-align: center;
   margin-bottom: 5px;
-  background-color: #3B7196;
+  background-color: #79a3b1;
   color:#fff;
   padding: 1%;
   border-top-left-radius: 10px;
@@ -50,6 +50,10 @@ form{
   display: block;
   margin: 2px auto;
 
+}
+
+.errors{
+  color: #fff;
 }
 
 input[type="submit"]{
